syntax = "proto3";

package user;

option go_package = "./proto";

// UserService provides user management operations
service UserService {
  // Get a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // List all users
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Update an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Delete a user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // Server streaming: Stream users
  rpc StreamUsers(StreamUsersRequest) returns (stream User);

  // Client streaming: Create multiple users
  rpc CreateUsers(stream CreateUserRequest) returns (CreateUsersResponse);

  // Bidirectional streaming: Chat with users
  rpc UserChat(stream UserChatRequest) returns (stream UserChatResponse);
}

// User message
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

// GetUser request and response
message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
  string error = 2;
}

// CreateUser request and response
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message CreateUserResponse {
  int32 id = 1;
  string error = 2;
}

// ListUsers request and response
message ListUsersRequest {
  // Optional filter parameters
  string name_contains = 1;
  int32 min_age = 2;
  int32 max_age = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  string error = 2;
}

// UpdateUser request and response
message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message UpdateUserResponse {
  User user = 1;
  string error = 2;
}

// DeleteUser request and response
message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// Stream users request
message StreamUsersRequest {
  int32 count = 1;
}

// Create users response (for client streaming)
message CreateUsersResponse {
  repeated int32 ids = 1;
  int32 count = 2;
}

// User chat messages
message UserChatRequest {
  string message = 1;
  int32 user_id = 2;
}

message UserChatResponse {
  string message = 1;
  int64 timestamp = 2;
}
